--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -7,14 +7,17 @@
                 <!-- Coluna 1 -->
                 <div>
                     <h3 class="text-lg font-semibold text-gray-700 mb-2">Desktop</h3>
-                    <ul class="space-y-1 text-sm text-gray-600 py-2">
+                    <p-listbox [options]="cities" formControlName="selectedCity" [checkmark]="true" [highlightOnSelect]="true" optionValue="name" optionLabel="name" (onChange)="itemClicado($event.value)" [styleClass]="'border-none shadow-none '"></p-listbox>
+
+                  
+                    <!--  <ul class="space-y-1 text-sm text-gray-600 py-2">
                         <li class="hover:text-blue-500 font-bold ">StandAlone</li>
                         <li>iMac</li>
                         <li>Mini PC</li>
                         <li>All-In-One</li>
                         <li>Monitor + PC</li>
                         <li class="font-medium text-blue-500 cursor-pointer">Ver todos os produtos</li>
-                    </ul>
+                    </ul> -->
                 </div>
 
                 <!-- Coluna 2 -->
@@ -57,7 +60,7 @@
                 <!-- Coluna 5 - Imagem ou destaque -->
                 <div class="flex items-center justify-center">
                     <img src="https://ncrangola.vtexassets.com/assets/vtex.file-manager-graphql/images/91bfb3f5-be61-425f-8fa1-7433788ca933___19bf975c83569cadf01926bfd71341b1.webp"
-                        alt="banner" class="rounded-lg shadow-md" />
+                        alt="banner" class="rounded-lg shadow-md h-20rem" />
                 </div>
             </div>
         </div>
