--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,15 +1,31 @@
-<div class="layout-topmenu py-2">
+<div class="layout-topmenu py-3 ">
+    <div class="layout-topbar-logo-container">
+        <button class=" layout-menu-button layout-topbar-action">
+            <i class="pi pi-bars"></i>
+        </button>
+        <a class="layout-topbar-logo" routerLink="/">
+
+            <span>SAKAI</span>
+        </a>
+        
+    </div>
+
     <div class="relative group " (mouseenter)="toggleMenu(true)" (mouseleave)="toggleMenu(false)">
-        <button class="px-4 py-2 font-semibold hover:text-blue-600">Informática</button>
-        <div class="relative top-full left-0 z-50 w-full bg-white shadow-lg pt-6 pb-8 transition-all duration-200"
+        <p-button class="px-4 font-semibold hover:text-blue-600" label="Categorias" severity="contrast" [rounded]="true"
+            [text]="true" [outlined]="true" [size]="'small'"><i class="pi pi-arrow-down"></i></p-button>
+        <div class="relative layout-top-item top-full left-0 z-50 bg-white shadow-lg pt-6 pb-8 transition-all duration-200"
             *ngIf="showMenu">
-            <div class="max-w-7xl mx-auto grid grid-cols-5 gap-8 px-6">
+            <div class="max-w-full  mx-auto grid grid-cols-5 gap-4 px-4">
                 <!-- Coluna 1 -->
                 <div>
-                    <h3 class="text-lg font-semibold text-gray-700 mb-2">Desktop</h3>
-                    <p-listbox [options]="cities" formControlName="selectedCity" [checkmark]="true" [highlightOnSelect]="true" optionValue="name" optionLabel="name" (onChange)="itemClicado($event.value)" [styleClass]="'border-none shadow-none '"></p-listbox>
+                    <h3 class="text-lg font-semibold text-gray-700 mb-2 text-center">Desktop</h3>
+                    <p-listbox [options]="cities" [(ngModel)]="selectedCity" [checkmark]="true"
+                        [highlightOnSelect]="false" optionValue="name" optionLabel="name"
+                        (onChange)="itemClicado($event.value)" class="custom-listbox"
+                        [styleClass]="'border-none shadow-none'">
+                    </p-listbox>
 
-                  
+
                     <!--  <ul class="space-y-1 text-sm text-gray-600 py-2">
                         <li class="hover:text-blue-500 font-bold ">StandAlone</li>
                         <li>iMac</li>
@@ -22,42 +38,59 @@
 
                 <!-- Coluna 2 -->
                 <div>
-                    <h3 class="text-lg font-semibold text-gray-700 mb-2">Portáteis</h3>
-                    <ul class="space-y-1 text-sm text-gray-600">
+                    <h3 class="text-lg font-semibold text-gray-700 mb-2 text-center">Portáteis</h3>
+                    <!--   <ul class="space-y-1 text-sm text-gray-600">
                         <li>MacBook</li>
                         <li>Portáteis Gaming</li>
                         <li>Casa e Escritório</li>
                         <li>Acessórios para portáteis</li>
                         <li class="font-medium text-blue-500 cursor-pointer">Ver todos os produtos</li>
-                    </ul>
+                    </ul> -->
+                    <p-listbox [options]="cities" [(ngModel)]="selectedCity" [checkmark]="true"
+                        [highlightOnSelect]="false" optionValue="name" optionLabel="name"
+                        (onChange)="itemClicado($event.value)" class="custom-listbox"
+                        [styleClass]="'border-none shadow-none'">
+                    </p-listbox>
                 </div>
 
                 <!-- Coluna 3 -->
                 <div>
-                    <h3 class="text-lg font-semibold text-gray-700 mb-2">Acessórios</h3>
-                    <ul class="space-y-1 text-sm text-gray-600">
+                    <h3 class="text-lg font-semibold text-gray-700 mb-2 text-center">Acessórios</h3>
+                    <!--  <ul class="space-y-1 text-sm text-gray-600">
                         <li>Bases, Tapetes</li>
                         <li>Cabos</li>
                         <li>Dockstation</li>
                         <li>Memórias RAM</li>
                         <li>Transformadores</li>
                         <li class="font-medium text-blue-500 cursor-pointer">Ver todos os produtos</li>
-                    </ul>
+                    </ul> -->
+                    <p-listbox [options]="cities" [(ngModel)]="selectedCity" [checkmark]="true"
+                        [highlightOnSelect]="false" optionValue="name" optionLabel="name"
+                        (onChange)="itemClicado($event.value)" class="custom-listbox"
+                        [styleClass]="'border-none shadow-none'">
+                    </p-listbox>
                 </div>
 
                 <!-- Coluna 4 -->
                 <div>
-                    <h3 class="text-lg font-semibold text-gray-700 mb-2">Mais</h3>
-                    <ul class="space-y-1 text-sm text-gray-600">
+                    <h3 class="text-lg font-semibold text-gray-700 mb-2 text-center">Mais</h3>
+                    <!--  <ul class="space-y-1 text-sm text-gray-600">
                         <li>Armazenamento +</li>
                         <li>Impressão +</li>
                         <li>Redes e Internet +</li>
                         <li>Software +</li>
                         <li>Monitores +</li>
-                    </ul>
+                    </ul> -->
+                    <p-listbox [options]="cities" [(ngModel)]="selectedCity" [checkmark]="true"
+                        [highlightOnSelect]="false" optionValue="name" optionLabel="name"
+                        (onChange)="itemClicado($event.value)" class="custom-listbox"
+                        [styleClass]="'border-none shadow-none'">
+                    </p-listbox>
                 </div>
 
                 <!-- Coluna 5 - Imagem ou destaque -->
+                <!--  -->
+
                 <div class="flex items-center justify-center">
                     <img src="https://ncrangola.vtexassets.com/assets/vtex.file-manager-graphql/images/91bfb3f5-be61-425f-8fa1-7433788ca933___19bf975c83569cadf01926bfd71341b1.webp"
                         alt="banner" class="rounded-lg shadow-md h-20rem" />
@@ -65,31 +98,68 @@
             </div>
         </div>
     </div>
-    
-        <div class="layout-topbar-menu hidden lg:block ">
+   <!-- <div class=" ml-auto ">
+    <input type="text" pInputText [(ngModel)]="value" />
+        <p-button icon="pi pi-search" severity="secondary" [rounded]="true" [outlined]="true" (click)="itemClicado($event)" />
 
-            <div class="layout-topbar-menu-content">
-
-                <button type="button" class="layout-topbar-action">
-                    <i class="pi pi-calendar"></i>
-                    <span>Calendar</span>
-                </button>
-                <button type="button" class="layout-topbar-action">
-                    <i class="pi pi-inbox"></i>
-                    <span>Messages</span>
-                </button>
-                <button type="button" class="layout-topbar-action">
-                    <i class="pi pi-user"></i>
-                    <span>Profile</span>
-                </button>
-                <button type="button" class="layout-topbar-action ">
-                    <i class="pi pi-shopping-cart"></i>
-                    <span>Carrinho</span>
-                </button>
-            </div>
+   </div> -->
+    <div class="text-gray-600 dark:text-gray-300 outline-none focus:outline-none ml-auto">
+        <div class="relative flex">
+            <select 
+                class="bg-white dark:bg-gray-800 h-10 px-5 rounded-l-full text-sm focus:outline-none outline-none border-2 border-gray-500 dark:border-gray-600 border-r-1 cursor-pointer max-h-10 overflow-y-hidden">
+                <option class="font-medium cursor-pointer" value="filter">filter</option>
+            </select>
+            <input 
+                type="search" 
+                name="search"
+                placeholder="Search"
+                class="bg-white dark:bg-gray-800 h-10 flex px-5 w-full rounded-r-full text-sm focus:outline-none border-2 border-l-0 border-gray-500 dark:border-gray-600"
+                autocomplete="off" 
+                spellcheck="false" 
+                required 
+                step="any" 
+                autocapitalize="none" 
+                autofocus />
+            <button 
+                type="submit" 
+                class="absolute inset-y-0 right-0 mr-2 flex items-center px-2">
+                <svg 
+                    class="h-6 w-6 fill-current dark:text-white" 
+                    xmlns="http://www.w3.org/2000/svg"
+                    xmlns:xlink="http://www.w3.org/1999/xlink" 
+                    version="1.1" id="Capa_1" x="0px" y="0px"
+                    viewBox="0 0 56.966 56.966" 
+                    xml:space="preserve" 
+                    width="512px" 
+                    height="512px">
+                        <path
+                            d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23  s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92  c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17  s-17-7.626-17-17S14.61,6,23.984,6z" />
+                </svg>
+            </button>
         </div>
-    
-</div>
+    </div>
+   
+        <div class="layout-topbar-menu-content ml-auto"></div>
+
+            <button type="button" class="layout-topbar-action">
+                <i class="pi pi-calendar"></i>
+                <span>Calendar</span>
+            </button>
+            <button type="button" class="layout-topbar-action">
+                <i class="pi pi-inbox"></i>
+                <span>Messages</span>
+            </button>
+            <button type="button" class="layout-topbar-action">
+                <i class="pi pi-user"></i>
+                <span>Profile</span>
+            </button>
+            <button type="button" class="layout-topbar-action ">
+                <i class="pi pi-shopping-cart"></i>
+                <span>Carrinho</span>
+            </button>
+       
+    </div>
+
 
 <!-- <div class="layout-topbar">
     <div class="layout-topbar-logo-container">
