--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -43,8 +43,8 @@
                 <i class="pi pi-linkedin text-2xl"></i>
             </div>
         </div>
-        <div class="col-12 md:col-2 text-left justify-center">
-            <p class="text-lg font-bold">Ajuda</p>
+        <div class="col-12 md:col-2 text-left justify-center sm:px-8 sm:col-6">
+            <p class="text-lg font-bold">Links Rápido</p>
             <ul class="list-none p-0 m-0">
             <li><a href="/" class="text-sm text-black-500 hover:text-blue-900 hover:font-bold">Início</a></li>
             <li><a href="/sobre-nos" class="text-sm text-black-500 hover:text-blue-900 hover:font-bold">Sobre Nós</a></li>
@@ -54,17 +54,34 @@
             </ul>
         </div>
        
-        <div class="col-12 md:col-3">
-            <p class="text-lg font-bold">Políticas</p>
+        <div class="col-12 md:col-3 sm:px-8 sm:col-6">
+            <p class="text-lg font-bold">Contato</p>
            <p><i class="pi pi-map-marker text-lg mr-2 text-blue-500"></i>  Av. Paulista, 1000, São Paulo - SP, Brasil</p>
             <p><i class="pi pi-phone text-lg mr-2 text-blue-500"></i> (11) 99999-9999</p>
 
 <p><i class="pi pi-envelope text-lg mr-2 text-blue-500"></i> contatoshopmaster.com</p>
 
         </div>
-        <div class="col-12 md:col-3">
-            <p class="text-lg font-bold">Contato</p>
-            <p class="text-sm">Fale conosco</p>
+        <div class="col-12 md:col-3 px-4 sm:px-8 ">
+            <p class="text-lg font-bold">Newsletter</p>
+            <p class="text-sm">Inscreva-se para receber nossas novidades e promoções exclusivas.</p>
+            <div class="max-w-[400px] w-full">
+
+            
+            <div class="relative ">
+                <input type="text" name="q" class="w-full border h-10 shadow p-3 rounded-full dark:text-gray-800 dark:border-gray-700 dark:bg-gray-200" placeholder="search">
+                <button type="submit">
+                    <svg class="text-teal-400 h-6 w-6 absolute top-3 right-1 pl-8 fill-current dark:text-teal-300"
+                        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"
+                        x="0px" y="0px" viewBox="0 0 56.966 56.966"
+                        style="enable-background:new 0 0 56.966 56.966;" xml:space="preserve">
+                        <path
+                            d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23  s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92  c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17  s-17-7.626-17-17S14.61,6,23.984,6z">
+                        </path>
+                    </svg>
+                </button>
+            </div>
+        </div>
         </div>
     </div>
 </div>
