--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -5,9 +5,9 @@
         </button>
         <a class="layout-topbar-logo" routerLink="/">
 
-            <span>SAKAI</span>
+            <span>KWATA</span>
         </a>
-        
+
     </div>
 
     <div class="relative group " (mouseenter)="toggleMenu(true)" (mouseleave)="toggleMenu(false)">
@@ -91,22 +91,18 @@
                 <!-- Coluna 5 - Imagem ou destaque -->
                 <!--  -->
 
-                <div class="flex items-center justify-center">
+                <div class="flex items-center justify-center sm:hidden">
                     <img src="https://ncrangola.vtexassets.com/assets/vtex.file-manager-graphql/images/91bfb3f5-be61-425f-8fa1-7433788ca933___19bf975c83569cadf01926bfd71341b1.webp"
                         alt="banner" class="rounded-lg shadow-md h-20rem" />
                 </div>
             </div>
         </div>
     </div>
-   <!-- <div class=" ml-auto ">
-    <input type="text" pInputText [(ngModel)]="value" />
-        <p-button icon="pi pi-search" severity="secondary" [rounded]="true" [outlined]="true" (click)="itemClicado($event)" />
 
-   </div> -->
-    <div class="text-gray-600 dark:text-gray-300 outline-none focus:outline-none ml-auto">
+    <!--     <div class="text-gray-600 dark:text-gray-300 outline-none focus:outline-none ml-auto">
         <div class="relative flex">
             <select 
-                class="bg-white dark:bg-gray-800 h-10 px-5 rounded-l-full text-sm focus:outline-none outline-none border-2 border-gray-500 dark:border-gray-600 border-r-1 cursor-pointer max-h-10 overflow-y-hidden">
+                class="bg-white dark:bg-gray-800 h-10 px-5 rounded-l-full text-sm focus:outline-none outline-none border-2 border-gray-500 dark:border-gray-600 border-r-1 cursor-pointer max-h-10  overflow-y-hidden">
                 <option class="font-medium cursor-pointer" value="filter">filter</option>
             </select>
             <input 
@@ -115,6 +111,7 @@
                 placeholder="Search"
                 class="bg-white dark:bg-gray-800 h-10 flex px-5 w-full rounded-r-full text-sm focus:outline-none border-2 border-l-0 border-gray-500 dark:border-gray-600"
                 autocomplete="off" 
+                [(ngModel)]="value"
                 spellcheck="false" 
                 required 
                 step="any" 
@@ -122,7 +119,8 @@
                 autofocus />
             <button 
                 type="submit" 
-                class="absolute inset-y-0 right-0 mr-2 flex items-center px-2">
+                (click)="itemClicado($event)"
+                class="absolute inset-y-0 right-0 mr-0 flex items-center px-2 align-center cursor-pointer border-circle center bg-black text-white border-1">
                 <svg 
                     class="h-6 w-6 fill-current dark:text-white" 
                     xmlns="http://www.w3.org/2000/svg"
@@ -137,28 +135,67 @@
                 </svg>
             </button>
         </div>
-    </div>
-   
-        <div class="layout-topbar-menu-content ml-auto"></div>
+    </div> -->
+    <div class="ml-auto ">
+        <label
+            class="mx-auto mt-20 relative bg-white min-w-sm max-w-2xl flex flex-col md:flex-row items-center justify-center border p-1 rounded-2xl gap-2 shadow-2xl focus-within:border-gray-300"
+            for="search-bar">
+            <i class="pi pi-search"></i>
+            <input id="search-bar " placeholder="Pesquisar" class=" w-full rounded-md flex-1 outline-none bg-white ">
+            <button type="submit" (click)="itemClicado($event)"
+                class="w-full md:w-auto px-2 py-1 border-round-3xl bg-black border-black text-white fill-white active:scale-95 duration-100 border will-change-transform overflow-hidden relative rounded-xl transition-all disabled:opacity-70">
 
-            <button type="button" class="layout-topbar-action">
-                <i class="pi pi-calendar"></i>
-                <span>Calendar</span>
+                <div class="relative">
+
+                    <!-- Loading animation change opacity to display -->
+                    <div
+                        class="flex items-center justify-center h-2 w-2  absolute inset-1/2 -translate-x-1/2 -translate-y-1/2 transition-all ">
+                        <svg class="opacity-0 animate-spin w-full h-full" xmlns="http://www.w3.org/2000/svg" fill="none"
+                            viewBox="0 0 24 24">
+                            <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4">
+                            </circle>
+                            <path class="opacity-75" fill="currentColor"
+                                d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z">
+                            </path>
+                        </svg>
+                    </div>
+
+                    <!--  <div class="flex items-center transition-all opacity-100 valid:"><span
+                    class="text-sm font-semibold whitespace-nowrap truncate mx-auto text-gray-500">   
+                    Search
+                </span>
+            </div> -->
+                    Search
+                </div>
+
             </button>
-            <button type="button" class="layout-topbar-action">
-                <i class="pi pi-inbox"></i>
-                <span>Messages</span>
-            </button>
-            <button type="button" class="layout-topbar-action">
-                <i class="pi pi-user"></i>
-                <span>Profile</span>
-            </button>
-            <button type="button" class="layout-topbar-action ">
-                <i class="pi pi-shopping-cart"></i>
-                <span>Carrinho</span>
-            </button>
-       
+        </label>
     </div>
+
+    <div class="layout-topbar-menu-content ml-auto pl-4"></div>
+    <p-overlaybadge value="2" class="layout-topbar-action" badgeSize="small" severity="danger"
+        (click)="itemClicado($event)">
+        <i class="pi pi-bell" style="font-size: 1.1rem"></i>
+    </p-overlaybadge>
+    <p-overlaybadge value="2" class="layout-topbar-action" badgeSize="small" severity="danger"
+        (click)="itemClicado($event)">
+        <i class="pi pi-heart"></i>
+        <span>Messages</span>
+    </p-overlaybadge>
+    <button type="button" class="layout-topbar-action">
+        <i class="pi pi-user"></i>
+        <span>Profile</span>
+    </button>
+    <p-overlaybadge value="2" class="layout-topbar-action" badgeSize="small" severity="contrast"
+        (click)="itemClicado($event)">
+
+        <i class="pi pi-shopping-cart"></i>
+        <span>Carrinho</span>
+    </p-overlaybadge>
+
+
+
+</div>
 
 
 <!-- <div class="layout-topbar">
